# Homography

./: CMakeLists.txt  README.md
data/: ThaiLion-10-pts.txt  ThaiLion-35991-pts.txt  ThaiLion-50-pts.txt  ThaiLion-8-pts.txt  ThaiLion-pts.txt  cube-pts.txt  surf_pts.txt  thai-lion-pts.txt
data/alison/: cameras.xml  correspondencies.txt  correspondencies_noise.txt  surf_pts.txt
data/results/: pier123.txt  pier23.txt
src/: CMakeLists.txt
src/Homography/: AppMain.cpp  CMakeLists.txt  DLT.cpp  DLT.h  GaussNewton.cpp  GaussNewton.h  ImageHelper.h  ObjHelper.h  Points.cpp  Points.h  QImageWidget.cpp  QImageWidget.h  RansacDLT.cpp  RansacDLT.h  Reconstruction3D.cpp  Reconstruction3D.h  Triangulation.cpp  Triangulation.h
src/Mosaic/: CMakeLists.txt  MosaicMain.cpp
src/Reconstruction3D/: CMakeLists.txt  Reconstruction3DMain.cpp
src/SurfOpenCV/: CMakeLists.txt  surf_matcher.cpp
src/TestNonLinear/: CMakeLists.txt  TestNonLinear.cpp
src/TestReconstruction3D/: TestReconstruction3D.cpp
src/TestReconstruction3DCube/: CMakeLists.txt  TestReconstruction3D.cpp  TestReconstruction3DCube.cpp
src/TestReconstruction3DThaiLion/: CMakeLists.txt  TestReconstruction3DThaiLion.cpp
src/TestTriangulation/: CMakeLists.txt  TestTriangulation.cpp
